src/objects/MUSW__Junction_Add_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>MUSW__Button_Label__c</fullName>
        <description>Determines what text the action button will say in the list view or in the portal. Left blank blank it will read “Done.”</description>
        <inlineHelpText>Determines what text the action button will say in the list view or in the portal. Left blank blank it will read “Done.”</inlineHelpText>
        <label>Button Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Fieldset__c</fullName>
        <description>Name of the Field Set you created on the List object that determines what fields will display on the list.</description>
        <inlineHelpText>Name of the Field Set you created on the List object that determines what fields will display on the list.</inlineHelpText>
        <label>Page Layout Field Set Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Filter__c</fullName>
        <description>Used to narrow down records that the user can view and select. Use key=‘value’, key=‘value’ to input the text filters.</description>
        <inlineHelpText>Used to narrow down records that the user can view and select. Use key=‘value’, key=‘value’ to input the text filters.</inlineHelpText>
        <label>System Default Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Junction_Object_Name__c</fullName>
        <description>The full API name of the junction object you created for this process.</description>
        <inlineHelpText>The full API name of the junction object you created for this process.</inlineHelpText>
        <label>Junction Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__List_Object_Name__c</fullName>
        <description>Full API name for the object from which the List of available records will be generated.</description>
        <inlineHelpText>Full API name for the object from which the List of available records will be generated.</inlineHelpText>
        <label>List Object API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__List_Parent_Lookup__c</fullName>
        <description>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the List object.</description>
        <inlineHelpText>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the List object.</inlineHelpText>
        <label>Parent Lookup Field API Name (List)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Page_Title__c</fullName>
        <description>Title of the page you want to display to the end user. Left blank, it will read “Select records to associate with [the current record name].”</description>
        <inlineHelpText>Title of the page you want to display to the end user. Left blank, it will read “Select records to associate with [the current record name].”</inlineHelpText>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Source_Parent_Lookup__c</fullName>
        <description>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the Source object</description>
        <inlineHelpText>If using a lookup to further filter the results that will be presented in the list (such as with an Account), enter the full API name for the shared field on the Source object</inlineHelpText>
        <label>Parent Lookup Field API Name (Source)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__User_Filter_Fieldset__c</fullName>
        <description>Name of the Field Set you created to to allow the user to filter the list results.</description>
        <inlineHelpText>Name of the Field Set you created to to allow the user to filter the list results.</inlineHelpText>
        <label>User Defined Filter Field Set Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Junction Add Setting</label>
    <pluralLabel>Junction Add Settings</pluralLabel>
</CustomObject>